# Moza2Joystick

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json
docs/: build_instructions.md
examples/basic_connection_test/: main.cpp
include/: EmulatorFactory.h  Factories.h  IEmulator.h  IMozaDevice.h  MozaFactory.h  MozaReader.h  MozaSDK.h  Utils.h  VJoyOutput.h  ViGEmOutput.h
src/: EmulatorFactory.cpp  Factories.cpp  MozaFactory.cpp  MozaReader.cpp  MozaSDK.cpp  Utils.cpp  VJoyOutput.cpp  ViGEmOutput.cpp  main.cpp
